# phoneuid

./: ChangeLog  TODO  configure.ac
data/: 80phoneuid  Makefile.am  phoneui-wrapper.sh  phoneui.conf  phoneuid-call-management.service  phoneuid-contacts.service  phoneuid-dialer.service  phoneuid-dialogs.service  phoneuid-messages.service  phoneuid.conf
data/dbus-1/system-services/: org.shr.phoneui.service  phoneuid-idle-screen.service  phoneuid-messages.service  phoneuid-settings.service
data/dbus-1/system.d/: phoneuid.conf
src/: Makefile.am  phoneuid-calendar.c  phoneuid-calendar.h  phoneuid-call-management.c  phoneuid-call-management.h  phoneuid-contacts.c  phoneuid-contacts.h  phoneuid-dbus-common.h  phoneuid-dbus.c  phoneuid-dbus.h  phoneuid-dialer.c  phoneuid-dialer.h  phoneuid-idle-screen.c  phoneuid-idle-screen.h  phoneuid-messages.c  phoneuid-messages.h  phoneuid-notification.c  phoneuid-notification.h  phoneuid-phone-log.c  phoneuid-phone-log.h  phoneuid-settings.c  phoneuid-settings.h  phoneuid.c
src/dbus/: org.shr.phoneuid.Messages.xml
