MAINTAINERCLEANFILES = Makefile.in

dist_sysconf_DATA = phoneuid.conf 
xsessiondir = $(sysconfdir)/X11/Xsession.d
dbus_systemdir = $(sysconfdir)/dbus-1/system.d
dbus_servicesdir = $(datadir)/dbus-1/system-services
dbus_system_DATA = dbus-1/system.d/*
dbus_services_DATA = dbus-1/system-services/*
xsession_SCRIPTS = X11/80phoneuid.sh
bin_SCRIPTS = phoneui-wrapper.sh
